--- a/Martha/index.html
+++ b/Martha/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sign Up</title>
-    <!--   <link rel="stylesheet" href="css/pstyle.css"> -->
-    <!--   <link rel="stylesheet" href="css/unsemantic-grid-responsive-tablet.css">   -->
+    <title>MA</title>
+    <link rel="stylesheet" href="css/pstyle.css">
+    <link rel="stylesheet" href="css/unsemantic-grid-responsive-tablet.css">
     <style>
         body{
             background-size: cover;
             background-repeat: no-repeat;
             background-image: url("images/sports.jpg");
-            background-color: white;
+            background-color: black;
             background-attachment: scroll;
         }
         header{
@@ -38,21 +38,22 @@
     </style>
 </head>
 
+<?php
+require "Header.php";
+?>
 
 
 <!-- Main Starts -->
 
 <main class="content-control">
     <!--<img id="Sportbanner" src="images/sports.jpg" alt="Sports Home">-->
-    <section class="boxregister">
+
         <!--Section 1 DESCRIPTION-->
         <section id="AppDescription" class="grid-100">
-            <h2> HOla jonas
-                Making it easier to find people around you to organize and play your sport  </h2>
-            <p> QUICK PLAYs</p>
-
+            <h2> Martha Arias Estilismo profesional </h2>
+            <p> QUICK PLAYs            </p>
         </section><br><br>
-    </section>
+
     <form id="register" method="post" action="register.php" >
 
         <section  class="grid-60">
@@ -78,11 +79,7 @@
 
 
 </main>
-<!-- Main
-
-require "Header.php";
-
- Ends -->
+<!-- Main Ends -->
 
 </body>
 </html>
